<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizRealm_rulesScreen">

    <TextView
        android:id="@+id/spacer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/logo_text1"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer1"/>

    <TextView
        android:id="@+id/spacer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/title1"/>

    <TextView
        android:id="@+id/rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="left"
        android:paddingLeft="10dp"
        android:text="@string/rules"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer2"/>

    <TextView
        android:id="@+id/rule1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="left"
        android:paddingLeft="25dp"
        android:text="@string/rule1"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rules"/>

    <TextView
        android:id="@+id/rule2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="left"
        android:paddingLeft="25dp"
        android:text="@string/rule2"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rule1"/>

    <TextView
        android:id="@+id/rule3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="left"
        android:paddingLeft="25dp"
        android:text="@string/rule3"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rule2"/>

    <TextView
        android:id="@+id/spacer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/rule3"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/Message"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer3"/>

    <TextView
        android:id="@+id/spacer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/message"/>

    <TextView
        android:id="@+id/offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/offer"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer4"/>


    <TextView
        android:id="@+id/spacer5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2.5dp"
        app:layout_constraintTop_toBottomOf="@id/offer"/>

    <TextView
        android:id="@+id/accept_quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="left"
        android:onClick="play"
        android:text="@string/accept_quest"
        android:textColor="@color/link_color"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer5" />

    <TextView
        android:id="@+id/decline_quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/fontasia"
        android:onClick="exit"
        android:text="@string/decline_quest"
        android:textColor="@color/link_color"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintLeft_toRightOf="@id/accept_quest"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer5" />

</android.support.constraint.ConstraintLayout>