<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizRealm_loginScreen">

    <TextView
        android:id="@+id/spacer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/logo_text1"
        android:textColor="#000000"
        android:textSize="90sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer1"/>

    <TextView
        android:id="@+id/spacer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/title1"/>

    <EditText
        android:id="@+id/login_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/username"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spacer2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/password"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/login_box"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/reg"
        android:textColor="@color/link_color"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_box"/>

    <TextView
        android:id="@+id/spacer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/reg"/>


    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/info_text"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/spacer3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:src="@drawable/quiz_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text"/>

</android.support.constraint.ConstraintLayout>