<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizRealm_regScreen">

    <TextView
        android:id="@+id/spacer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/regtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/reg_logo_text1"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer1"/>

    <TextView
        android:id="@+id/spacer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2.5dp"
        app:layout_constraintTop_toBottomOf="@id/regtitle1"/>


    <EditText
        android:id="@+id/username_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/username_reg"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spacer2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/spacer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2.5dp"
        app:layout_constraintTop_toBottomOf="@id/username_box"/>


    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/password_reg"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spacer3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/spacer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2.5dp"
        app:layout_constraintTop_toBottomOf="@id/password_box"/>


    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/email"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spacer4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/spacer5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2.5dp"
        app:layout_constraintTop_toBottomOf="@id/email_box"/>


    <EditText
        android:id="@+id/first_name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/firstname"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spacer5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/spacer6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2.5dp"
        app:layout_constraintTop_toBottomOf="@id/first_name_box"/>

    <EditText
        android:id="@+id/last_name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/lastname"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spacer6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/spacer7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2.5dp"
        app:layout_constraintTop_toBottomOf="@id/last_name_box"/>

    <EditText
        android:id="@+id/dob_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:hint="@string/dob"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spacer7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/btn_create_account"
        android:textColor="@color/link_color"
        android:textSize="25sp"
        android:paddingTop="5dp"
        android:onClick="create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_box"/>

</android.support.constraint.ConstraintLayout>