<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizRealm_question1">

    <TextView
        android:id="@+id/headerspacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/question1"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerspacer"/>

    <TextView
        android:id="@+id/spacer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/question1"/>

    <CheckBox
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/answer1"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer1" />

    <TextView
        android:id="@+id/spacer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/answer1"/>

    <CheckBox
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/answer2"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/answer1"
        app:layout_constraintTop_toBottomOf="@id/spacer1"/>

    <TextView
        android:id="@+id/spacer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/answer1"/>

    <CheckBox
        android:id="@+id/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontasia"
        android:text="@string/answer3"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@id/answer1"
        app:layout_constraintTop_toBottomOf="@id/spacer2"/>

    <CheckBox
        android:id="@+id/answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/fontasia"
        android:gravity="center"
        android:text="@string/answer4"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/answer3"
        app:layout_constraintTop_toBottomOf="@id/spacer2"/>

    <TextView
        android:id="@+id/spacer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/answer3"/>

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/fontasia"
        android:textSize="30sp"
        android:text="@string/btn_Submit"
        app:layout_constraintTop_toBottomOf="@id/spacer4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>





</android.support.constraint.ConstraintLayout>